style: fix carousel caption and navbar on mobile

--- a/src/styles/Gallery.module.css
+++ b/src/styles/Gallery.module.css
@@ -23,17 +23,11 @@
   
   .carouselCaption h5 {
     font-size: 1rem;
-    font-weight: bold;
     color: #fff;
   }
   
   .carouselCaption p {
-    font-size: 0.5rem;
+    font-size: 0.9rem;
     color: #ddd;
   }
-
-  p {
-    color: #fff;
-  }
-  
   
