--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -34,6 +34,7 @@
     }
 
     .NavBar a {
+        background-color: var(--magnolia);
         font-size: 1rem; 
         padding: 0px 12px; 
     }
